Fixed a couple of bugs in EMS.